Creacion del avion que dispara a los buques

--- a/ESCENA_1/img.qrc
+++ b/ESCENA_1/img.qrc
@@ -3,5 +3,6 @@
         <file>fondo_azul.jpg</file>
         <file>buque_vertical.png</file>
         <file>buque_horizontal.png</file>
+        <file>avion.png</file>
     </qresource>
 </RCC>
